# livy-manager

./: .gitignore  .travis.yml  Cargo.toml  README.md
conf/: livy-manager.toml.template
src/: cmd_args.rs  config.rs  ldap.rs  lib.rs  livy_manager.rs  main.rs  server.rs
src/frontend/: mod.rs
src/frontend/html/: index.rs  login.rs  mod.rs
