[package]
name = "livy_manager"
version = "0.0.0"
authors = ["Keiji Yoshida <kjmrknsn@gmail.com>"]
description = "Livy Manager - Web UI for Managing Apache Livy Sessions"
license = "MIT/Apache-2.0"
homepage = "https://crates.io/crates/livy_manager"
repository = "https://github.com/kjmrknsn/livy-manager"
documentation = "https://docs.rs/livy_manager"
readme = "README.md"
keywords = ["livy", "livy-manager"]
categories = ["web-programming::http-server"]

[badges]
codecov = { repository = "kjmrknsn/livy-manager", branch = "master", service = "github" }
travis-ci = { repository = "kjmrknsn/livy-manager", branch = "master" }

[dependencies]
argparse = "0.2"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
