[package]
name = "livy_manager"
version = "0.0.0"
authors = ["Keiji Yoshida <kjmrknsn@gmail.com>"]
description = "Livy Manager - Web UI for Managing Apache Livy Sessions"
license = "MIT/Apache-2.0"
homepage = "https://crates.io/crates/livy_manager"
repository = "https://github.com/kjmrknsn/livy-manager"
documentation = "https://docs.rs/livy_manager"
readme = "README.md"
keywords = ["livy", "livy-manager"]
categories = ["web-programming::http-server"]

[badges]
travis-ci = { repository = "kjmrknsn/livy-manager", branch = "master" }

[dependencies]
argparse = "0.2"
futures = "0.1"
hyper = "0.11"
livy = "0.4"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
